<resources>
    <string name="app_name">Homescreen Template</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="favorites_tab">Favorites</string>
    <string name="profile_tab">Profile</string>
</resources>